--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
             <button class="stop" id="stop-btn" disabled>Stop Recording</button>
         </div>
         <audio id="audio-playback" controls style="display: none; margin-top: 15px;"></audio>
-        <button class="submit" id="submit-btn" disabled>Submit Homework</button>
+<label for="student-name">Your Name:</label>
+<input type="text" id="student-name" placeholder="Enter your name" required style="display: block; margin: 10px auto; padding: 5px;">
+
+<button class="submit" id="submit-btn" disabled>Submit Homework</button>
     </div>
 
     <script>
@@ -169,22 +172,28 @@
         });
 
         submitButton.addEventListener('click', async () => {
+    const studentName = document.getElementById('student-name').value.trim();
+    if (!studentName) {
+        alert('Please enter your name.');
+        return;
+    }
+
     if (audioChunks.length > 0) {
         // Create a Blob from the recorded audio
         const audioBlob = new Blob(audioChunks, { type: 'audio/wav' });
 
-        // Create FormData to send the file to the server
+        // Create FormData to send the file and name to the server
         const formData = new FormData();
-        formData.append('audioFile', audioBlob, 'homework.wav'); // Attach the file with a name
+        formData.append('audioFile', audioBlob, 'homework.wav'); // Audio file
+        formData.append('studentName', studentName); // Student name
 
         try {
-            // Send the audio file to the server
+            // Send the data to the server
             const response = await fetch('http://localhost:3000/submit-homework', {
                 method: 'POST',
                 body: formData,
             });
 
-            // Handle the server's response
             if (response.ok) {
                 alert('Homework submitted successfully!');
                 statusText.textContent = 'Status: Homework submitted';
