--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
         }
 
         button.record {
-            background-color: #28a745;
+            background-color: #70d6b8;
             color: white;
             margin-bottom: 15px;
         }
 
         button.stop {
-            background-color: #dc3545;
+            background-color: #ff5757;
             color: white;
             margin-bottom: 15px;
         }
@@ -122,11 +122,11 @@
 </head>
 <body>
     <div class="homework-container">
-        <h2>Homework Assignment</h2>
+        <h2>Homework</h2>
         <img src="https://via.placeholder.com/300" alt="Homework Image" id="homework-image">
         <div class="navigation">
-            <button class="prev" id="prev-btn" disabled>Previous</button>
-            <button class="next" id="next-btn">Next</button>
+            <button class="prev" id="prev-btn" disabled>▶</button>
+            <button class="next" id="next-btn">▶</button>
         </div>
         <p id="status">Status: Not recording</p>
         <div class="controls">
