--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         }
 
         button.record {
-            background-color: #70d6b8;
+            background-color: #28cf7f;
             color: white;
             margin-bottom: 15px;
         }
@@ -96,19 +96,19 @@
         }
 
         button.submit {
-            background-color: #007bff;
+            background-color: #004aad;
             color: white;
             margin-top: 20px;
         }
 
         button.prev {
-            background-color: #ffc107;
+            background-color: #ffbd59;
             color: white;
             transition: background-color 0.3s;
         }
 
         button.next {
-            background-color: #ffc107;
+            background-color: #ffbd59;
             color: white;
             transition: background-color 0.3s;
         }
@@ -125,7 +125,7 @@
         <h2>Homework</h2>
         <img src="https://via.placeholder.com/300" alt="Homework Image" id="homework-image">
         <div class="navigation">
-            <button class="prev" id="prev-btn" disabled>▶</button>
+            <button class="prev" id="prev-btn" disabled>◀</button>
             <button class="next" id="next-btn">▶</button>
         </div>
         <p id="status">Status: Not recording</p>
@@ -134,9 +134,9 @@
             <button class="stop" id="stop-btn" disabled>Stop Recording</button>
         </div>
         <audio id="audio-playback" controls></audio>
-        <label for="student-name">Your Name:</label>
+        <label for="student-name">Your Name: (영어 이름을 입력하세요.)</label>
         <input type="text" id="student-name" placeholder="Enter your name" required>
-        <button class="submit" id="submit-btn" disabled>Submit Homework</button>
+        <button class="submit" id="submit-btn" disabled>Submit </button>
     </div>
     <script>
         // Image logic
@@ -212,7 +212,7 @@ recordButton.addEventListener('click', async () => {
                 audioPlayback.style.visibility = 'visible'; // Ensure it's visible
                 console.log('Audio player updated with URL:', audioUrl); // Debug log
                 submitButton.disabled = false; // Enable the submit button
-                statusText.textContent = 'Status: Recording completed. Ready to submit.';
+                statusText.textContent = 'Submit 버튼을 눌러 녹음 파일을 제출하세요.';
             } else {
                 console.error('No audio chunks available.');
             }
@@ -246,7 +246,7 @@ submitButton.addEventListener('click', async () => {
     console.log('Student Name:', studentName); // Debug log
 
     if (!studentName) {
-        alert('Please enter your name.');
+        alert('');
         return;
     }
 
@@ -269,7 +269,7 @@ submitButton.addEventListener('click', async () => {
             });
 
             if (response.ok) {
-                alert('Homework submitted successfully!');
+                alert('Homework submitted successfully! (숙제 제출 완료!)');
                 console.log('Server response:', await response.text()); // Debug log
                 statusText.textContent = 'Status: Homework submitted';
                 submitButton.disabled = true;
