--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Homework Platform</title>
+    <link rel="icon" href="data:,">
+
     <style>
         body {
             font-family: Arial, sans-serif;
