--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Homework Platform</title>
-    <link rel="icon" href="data:,">
-
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -264,11 +262,10 @@ submitButton.addEventListener('click', async () => {
         }
 
         try {
-            const response = await fetch('http://192.168.45.40:5000/submit-homework', {
-    method: 'POST',
-    body: formData,
-});
-
+            const response = await fetch('http://localhost:5000/submit-homework', {
+                method: 'POST',
+                body: formData,
+            });
 
             if (response.ok) {
                 alert('Homework submitted successfully! (숙제 제출 완료!)');
