--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ submitButton.addEventListener('click', async () => {
         }
 
         try {
-            const response = await fetch('http://localhost:5000/submit-homework', {
+            const response = await fetch('https://c47d-39-113-5-175.ngrok-free.app', {
                 method: 'POST',
                 body: formData,
             });
