--- a/index.html
+++ b/index.html
@@ -140,21 +140,23 @@
     </div>
     <script>
         // Image logic
-      const images = [
-    "https://img.freepik.com/free-psd/cartoon-hat-illustration_23-2151311486.jpg?semt=ais_tags_boosted",
-    "https://img.freepik.com/free-vector/sticker-template-with-green-sweater-isolated_1308-69559.jpg?semt=ais_tags_boosted"
+     const images = [
+    "http://192.168.45.40:5000/images/set1/1.jpg",
+    "http://192.168.45.40:5000/images/set1/2.jpg",
+    "http://192.168.45.40:5000/images/set1/3.jpg"
 ];
 
 const imageElement = document.getElementById('homework-image');
 let currentImageIndex = 0;
 
 const updateImage = () => {
-    console.log("Image URL:", images[currentImageIndex]); // Debug: Log the current image URL
+    console.log("Loading image:", images[currentImageIndex]); // Debug log
     imageElement.src = images[currentImageIndex];
     imageElement.onerror = () => {
         console.error("Failed to load image:", images[currentImageIndex]);
-        imageElement.src = "https://via.placeholder.com/300"; // Fallback image
+        imageElement.src = "https://via.placeholder.com/300"; // Fallback
     };
+
     prevButton.disabled = currentImageIndex === 0;
     nextButton.disabled = currentImageIndex === images.length - 1;
 };
@@ -242,10 +244,10 @@ stopButton.addEventListener('click', () => {
 submitButton.addEventListener('click', async () => {
     const studentName = document.getElementById('student-name').value.trim();
     console.log('Submit Homework button clicked.');
-    console.log('Student Name:', studentName); // Debug log
+    console.log('Student Name:', studentName);
 
     if (!studentName) {
-        alert('');
+        alert('Please enter your name.');
         return;
     }
 
@@ -255,37 +257,35 @@ submitButton.addEventListener('click', async () => {
         formData.append('audioFile', audioBlob, 'homework.wav');
         formData.append('studentName', studentName);
 
-        // Debug log to check the FormData contents
-        console.log('FormData contents:');
+        console.log('FormData content:');
         for (const pair of formData.entries()) {
             console.log(`${pair[0]}: ${pair[1]}`);
         }
 
         try {
-            const response = await fetch('https://c47d-39-113-5-175.ngrok-free.app', {
+            const response = await fetch('https://c47d-39-113-5-175.ngrok-free.app/submit-homework', {
                 method: 'POST',
                 body: formData,
             });
 
             if (response.ok) {
                 alert('Homework submitted successfully! (숙제 제출 완료!)');
-                console.log('Server response:', await response.text()); // Debug log
+                console.log('Submission alert shown.');
                 statusText.textContent = 'Status: Homework submitted';
                 submitButton.disabled = true;
                 audioPlayback.classList.remove('audio-visible');
             } else {
                 console.error('Server responded with error:', response.statusText);
-                alert('Failed to submit homework. Please try again.');
+                alert(`Failed to submit homework. Error: ${response.statusText}`);
             }
         } catch (error) {
             console.error('Error during submission:', error);
-            alert('An error occurred while submitting homework.');
+            alert('An error occurred while submitting homework. Please try again.');
         }
     } else {
         alert('No recording found. Please record before submitting.');
     }
 });
-
 
     </script>
 </body>
