--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             min-height: 100vh;
             background-color: #f4f4f9;
         }
-
         .homework-container {
             text-align: center;
             background: #ffffff;
@@ -26,55 +25,17 @@
             max-width: 400px;
             width: 100%;
         }
-
         .homework-container img {
-    width: 100%;
-    max-width: 400px;
-    height: 300px;
-    object-fit: cover;
-    object-position: center center; /* Center cropping adjustment */
-    border-radius: 8px;
-    margin-bottom: 15px;
-    display: block;
-}
-
-
-        label[for="student-name"] {
-            display: block;
-            font-weight: bold;
-            margin: 15px 0 5px;
-            text-align: left;
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 15px;
+            border-radius: 8px;
         }
-
-        #student-name {
-            display: block;
-            margin: 0 auto 15px;
-            padding: 5px;
-            width: 90%;
-            max-width: 300px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 14px;
-        }
-
-        audio {
-            width: 100%;
-            max-width: 300px;
-            height: 40px;
-            margin: 15px 0;
-            visibility: hidden;
-        }
-
-        .audio-visible {
-            visibility: visible;
-        }
-
         .controls, .navigation {
             display: flex;
             justify-content: space-around;
             margin-top: 15px;
         }
-
         button {
             padding: 10px 20px;
             font-size: 16px;
@@ -82,37 +43,29 @@
             border-radius: 5px;
             cursor: pointer;
         }
-
         button.record {
-            background-color: #28cf7f;
+            background-color: #28a745;
             color: white;
-            margin-bottom: 15px;
         }
-
         button.stop {
-            background-color: #ff5757;
+            background-color: #dc3545;
             color: white;
-            margin-bottom: 15px;
         }
-
         button.submit {
-            background-color: #004aad;
+            background-color: #007bff;
             color: white;
             margin-top: 20px;
         }
-
         button.prev {
-            background-color: #ffbd59;
+            background-color: #ffc107;
             color: white;
             transition: background-color 0.3s;
         }
-
         button.next {
-            background-color: #ffbd59;
+            background-color: #ffc107;
             color: white;
             transition: background-color 0.3s;
         }
-
         button:disabled {
             background-color: #d3d3d3;
             color: #8c8c8c;
@@ -122,174 +75,105 @@
 </head>
 <body>
     <div class="homework-container">
-        <h2>Homework</h2>
+        <h2>Homework Assignment</h2>
         <img src="https://via.placeholder.com/300" alt="Homework Image" id="homework-image">
         <div class="navigation">
-            <button class="prev" id="prev-btn" disabled>◀</button>
-            <button class="next" id="next-btn">▶</button>
+            <button class="prev" id="prev-btn" disabled>Previous</button>
+            <button class="next" id="next-btn">Next</button>
         </div>
         <p id="status">Status: Not recording</p>
         <div class="controls">
             <button class="record" id="record-btn">Start Recording</button>
             <button class="stop" id="stop-btn" disabled>Stop Recording</button>
         </div>
-        <audio id="audio-playback" controls></audio>
-        <label for="student-name">Your Name: (영어 이름을 입력하세요.)</label>
-        <input type="text" id="student-name" placeholder="Enter your name" required>
-        <button class="submit" id="submit-btn" disabled>Submit </button>
+        <audio id="audio-playback" controls style="display: none; margin-top: 15px;"></audio>
+        <button class="submit" id="submit-btn" disabled>Submit Homework</button>
     </div>
+
     <script>
-        // Image logic
-     const images = [
-    "https://03750f6853c4.ngrok.app/images/set1/1.jpg",
-    "https://03750f6853c4.ngrok.app/images/set1/2.jpg",
-    "https://03750f6853c4.ngrok.app/images/set1/3.jpg"
-];
+        const images = [
+            "https://via.placeholder.com/300/FF0000", // Example image URLs
+            "https://via.placeholder.com/300/00FF00",
+            "https://via.placeholder.com/300/0000FF"
+        ];
+        let currentImageIndex = 0;
 
+        const imageElement = document.getElementById('homework-image');
+        const prevButton = document.getElementById('prev-btn');
+        const nextButton = document.getElementById('next-btn');
 
-
-
-const imageElement = document.getElementById('homework-image');
-let currentImageIndex = 0;
-
-const updateImage = () => {
-    console.log("Loading image:", images[currentImageIndex]); // Debug log
-    imageElement.src = images[currentImageIndex];
-    imageElement.onerror = () => {
-        console.error("Failed to load image:", images[currentImageIndex]);
-        imageElement.src = "https://via.placeholder.com/300"; // Fallback
-    };
-
-    prevButton.disabled = currentImageIndex === 0;
-    nextButton.disabled = currentImageIndex === images.length - 1;
-};
-
-const prevButton = document.getElementById('prev-btn');
-const nextButton = document.getElementById('next-btn');
-
-prevButton.addEventListener('click', () => {
-    if (currentImageIndex > 0) {
-        currentImageIndex--;
-        updateImage();
-    }
-});
-
-nextButton.addEventListener('click', () => {
-    if (currentImageIndex < images.length - 1) {
-        currentImageIndex++;
-        updateImage();
-    }
-});
-
-updateImage(); // Initialize the first image
-
-
-     
-let mediaRecorder;
-let audioChunks = [];
-
-const recordButton = document.getElementById('record-btn');
-const stopButton = document.getElementById('stop-btn');
-const submitButton = document.getElementById('submit-btn');
-const audioPlayback = document.getElementById('audio-playback');
-const statusText = document.getElementById('status');
-
-// Start recording
-recordButton.addEventListener('click', async () => {
-    console.log('Start Recording button clicked.'); // Debug log
-    try {
-        const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-        console.log('Microphone access granted.'); // Debug log
-
-        mediaRecorder = new MediaRecorder(stream);
-        mediaRecorder.ondataavailable = (event) => {
-            audioChunks.push(event.data);
-            console.log('Audio chunk received:', event.data); // Debug log
+        const updateImage = () => {
+            imageElement.src = images[currentImageIndex];
+            prevButton.disabled = currentImageIndex === 0;
+            nextButton.disabled = currentImageIndex === images.length - 1;
         };
 
-        mediaRecorder.onstop = () => {
-            if (audioChunks.length > 0) {
+        prevButton.addEventListener('click', () => {
+            if (currentImageIndex > 0) {
+                currentImageIndex--;
+                updateImage();
+            }
+        });
+
+        nextButton.addEventListener('click', () => {
+            if (currentImageIndex < images.length - 1) {
+                currentImageIndex++;
+                updateImage();
+            }
+        });
+
+        updateImage();
+
+        let mediaRecorder;
+        let audioChunks = [];
+        const recordButton = document.getElementById('record-btn');
+        const stopButton = document.getElementById('stop-btn');
+        const submitButton = document.getElementById('submit-btn');
+        const audioPlayback = document.getElementById('audio-playback');
+        const statusText = document.getElementById('status');
+
+        recordButton.addEventListener('click', async () => {
+            if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
+                alert('Audio recording is not supported in this browser.');
+                return;
+            }
+
+            const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+            mediaRecorder = new MediaRecorder(stream);
+
+            mediaRecorder.ondataavailable = event => {
+                audioChunks.push(event.data);
+            };
+
+            mediaRecorder.onstop = () => {
                 const audioBlob = new Blob(audioChunks, { type: 'audio/wav' });
                 const audioUrl = URL.createObjectURL(audioBlob);
-                audioPlayback.src = audioUrl; // Set the audio source
-                audioPlayback.classList.add('audio-visible'); // Show the audio player
-                audioPlayback.style.visibility = 'visible'; // Ensure it's visible
-                console.log('Audio player updated with URL:', audioUrl); // Debug log
-                submitButton.disabled = false; // Enable the submit button
-                statusText.textContent = 'Submit 버튼을 눌러 녹음 파일을 제출하세요.';
-            } else {
-                console.error('No audio chunks available.');
-            }
-        };
+                audioPlayback.src = audioUrl;
+                audioPlayback.style.display = 'block';
+                submitButton.disabled = false;
+                statusText.textContent = 'Status: Recording completed. Ready to submit.';
+            };
 
-        audioChunks = [];
-        mediaRecorder.start();
-        console.log('Recording started.'); // Debug log
-        statusText.textContent = 'Status: Recording...';
-        recordButton.disabled = true;
-        stopButton.disabled = false;
-    } catch (error) {
-        console.error('Error starting recording:', error);
-        alert('Failed to start recording. Please check microphone permissions.');
-    }
-});
+            audioChunks = [];
+            mediaRecorder.start();
+            statusText.textContent = 'Status: Recording...'; // Update status to recording
+            recordButton.disabled = true;
+            stopButton.disabled = false;
+        });
 
-// Stop recording
-stopButton.addEventListener('click', () => {
-    if (mediaRecorder) {
-        mediaRecorder.stop();
-        recordButton.disabled = false;
-        stopButton.disabled = true;
-    }
-});
+        stopButton.addEventListener('click', () => {
+            mediaRecorder.stop();
+            statusText.textContent = 'Status: Recording stopped'; // Update status to stopped
+            recordButton.disabled = false;
+            stopButton.disabled = true;
+        });
 
-// Submit homework
-submitButton.addEventListener('click', async () => {
-    const studentName = document.getElementById('student-name').value.trim();
-    console.log('Submit Homework button clicked.');
-    console.log('Student Name:', studentName);
-
-    if (!studentName) {
-        alert('Please enter your name.');
-        return;
-    }
-
-    if (audioChunks.length > 0) {
-        const audioBlob = new Blob(audioChunks, { type: 'audio/wav' });
-        const formData = new FormData();
-        formData.append('audioFile', audioBlob, 'homework.wav');
-        formData.append('studentName', studentName);
-
-        console.log('FormData content:');
-        for (const pair of formData.entries()) {
-            console.log(`${pair[0]}: ${pair[1]}`);
-        }
-
-        try {
-            const response = await fetch('https://c47d-39-113-5-175.ngrok-free.app/submit-homework', {
-                method: 'POST',
-                body: formData,
-            });
-
-            if (response.ok) {
-                alert('Homework submitted successfully! (숙제 제출 완료!)');
-                console.log('Submission alert shown.');
-                statusText.textContent = 'Status: Homework submitted';
-                submitButton.disabled = true;
-                audioPlayback.classList.remove('audio-visible');
-            } else {
-                console.error('Server responded with error:', response.statusText);
-                alert(`Failed to submit homework. Error: ${response.statusText}`);
-            }
-        } catch (error) {
-            console.error('Error during submission:', error);
-            alert('An error occurred while submitting homework. Please try again.');
-        }
-    } else {
-        alert('No recording found. Please record before submitting.');
-    }
-});
-
+        submitButton.addEventListener('click', () => {
+            alert('Homework submitted successfully!');
+            statusText.textContent = 'Status: Homework submitted'; // Update status after submission
+            submitButton.disabled = true;
+            audioPlayback.style.display = 'none';
+        });
     </script>
 </body>
-</html> 
+</html>
