--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ submitButton.addEventListener('click', async () => {
         }
 
         try {
-            const response = await fetch('https://c47d-39-113-5-175.ngrok-free.app/submit-homework', {
+            const response = await fetch('https://fleet-kingfish-basically.ngrok.app/submit-homework', {
                 method: 'POST',
                 body: formData,
             });
