--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
     <script>
         // Image logic
      const images = [
-    "https://fleet-kingfish-basically.ngrok.app/images/set1/1.jpg",
-    "https://fleet-kingfish-basically.ngrok.app/images/set1/2.jpg",
-    "https://fleet-kingfish-basically.ngrok.app/images/set1/3.jpg"
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/1.jpg",
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/2.jpg",
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/3.jpg"
 ];
 
 
