--- a/index.html
+++ b/index.html
@@ -143,8 +143,16 @@
      const images = [
     "https://fleet-kingfish-basically.ngrok.app/images/set (1)/1.jpg",
     "https://fleet-kingfish-basically.ngrok.app/images/set (1)/2.jpg",
-    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/3.jpg"
-];
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/3.jpg",
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/4.jpg",
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/5.jpg",
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/6.jpg",
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/7.jpg",
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/8.jpg",
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/9.jpg",
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/10.jpg",
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/11.jpg"
+         ];
 
 
 
