--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
     <script>
         // Image logic
      const images = [
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/SW.jpg",
     "https://fleet-kingfish-basically.ngrok.app/images/set (1)/1.jpg",
     "https://fleet-kingfish-basically.ngrok.app/images/set (1)/2.jpg",
     "https://fleet-kingfish-basically.ngrok.app/images/set (1)/3.jpg",
@@ -151,8 +152,9 @@
     "https://fleet-kingfish-basically.ngrok.app/images/set (1)/8.jpg",
     "https://fleet-kingfish-basically.ngrok.app/images/set (1)/9.jpg",
     "https://fleet-kingfish-basically.ngrok.app/images/set (1)/10.jpg",
-    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/11.jpg"
-         ];
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/11.jpg",
+    "https://fleet-kingfish-basically.ngrok.app/images/set (1)/Submit.jpg"
+     ];
 
 
 
